finished first cut of user and word models

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About Us</h1>
 <p>
-  <a href="http://rails.jeffweiss.org">SAT Words</a>
+  <%= link_to "SAT Words", root_path %>
   is a project to help high school students learn
   words appearing on the SAT by using definitions
   and examples that are meaningful to modern teenagers.
