--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>SAT Words</h1>
 <p>
   This is the home page for the
-  <a href="http://rails.jeffweiss.org">SAT Words</a>
+  <%= link_to "SAT Words", root_path %>
   application.
 </p>
