User signup complete

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,5 @@
   <%= link_to "SAT Words", root_path %>
   application.
 </p>
+
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
