--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Sign in", root_path %></li>
     </ul>
   </nav>
 </header>
