--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -17,7 +17,7 @@ header img {
 
 section {
   margin-top: 1em;
-  font-size: 120%
+  font-size: 120%;
   padding: 20px;
   background: #fff;
 }
@@ -51,8 +51,8 @@ nav {
 }
 
 nav ul {
-  margin: 0
-  padding: 0
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
@@ -72,6 +72,19 @@ nav ul li a:visited {
 
 nav ul li a:hover {
   text-decoration:underline;
+}
+
+a.signup_button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  width: 190px;
+  color: #fff;
+  background: #4512ae;
+  font-size: 150%;
+  font-weight: bold;
+  padding: 20px;
 }
 
 .round {
@@ -113,4 +126,49 @@ td.sidebar {
 .profile img.gravatar {
   border: 1px solid #999;
   margin-bottom: -15px;
+}
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+.field_with_errors {
+  margin-top: 10px;
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+.field_with_errors label {
+  color: #fff;
+}
+
+#error_explanation {
+  width: 400px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  background-color: #c00;
+  color: #fff;
+}
+
+#error_explanation p {
+  color: #333;
+  margin-bottom: 0;
+  padding: 5px;
+}
+
+#error_explanation ul li {
+  font-size: 12px;
+  list-style: square;
 }
