--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -172,3 +172,19 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none:
+}
+
+ul.words {
+  margin-top: 1em;
+}
+
+.words li {
+  list-style: none;
+}
